# trion

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: test.yml
src/: assembler.rs  disassembler.rs  lib.rs  main.rs
src/arm6m/: asm.rs  cond.rs  mod.rs  reg.rs  regset.rs  sysreg.rs  test.rs
src/asm/: arcob.rs  constant.rs  mod.rs
src/asm/directive/: addr.rs  align.rs  constant.rs  data.rs  global.rs  include.rs  mod.rs
src/asm/instr/: mod.rs
src/asm/mem/: map.rs  mod.rs
src/asm/memory/: map.rs  mod.rs
src/asm/memory/map/: mod.rs  test.rs
src/asm/simplify/: eval.rs  mod.rs  test.rs
src/macros/: mod.rs  num_enum.rs
src/text/: matcher.rs  mod.rs  operator.rs  parse.rs  token.rs
src/text/parse/: arg_ty.rs  choice.rs  mod.rs  test.rs
src/text/token/: mod.rs  test.rs
src/uf2/: codec.rs  crc.rs  mod.rs  write.rs
